@@ -694,6 +694,9 @@ subprojects { Project subproject ->
         useJUnitPlatform()
         jvmArgs '-Xmx2048m'
         systemProperty "micronaut.cloud.platform", "OTHER"
+        if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_14)) {
+            jvmArgs "--enable-preview"
+        }
     }
 
     tasks.withType(Checkstyle) {
